<resources>
    <string name="app_name">Implementation 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Andrew Garber</string>
    <string name="phone_no">08060708193</string>
    <string name="name_hint">Name</string>
    <string name="save_contact">Save Contact</string>
    <string name="phone_hint">Phone No.</string>
    <string name="contact_card">Add Contact</string>
    <string name="contact_added">Contact Saved</string>
    <string name="error">%1$s</string>
    <string name="email" />
    <string name="email_hint">Email</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="update_contact">Update Contact</string>


</resources>